feature: Adicionando tela para platar uma arvore

--- a/apps/user/templates/dashboard/index.html
+++ b/apps/user/templates/dashboard/index.html
@@ -6,21 +6,21 @@
 
 {% block content %}
     <main class="flex mt-16 mb-4 rounded p-4 border flex-col h-full">
-        <h1 class="text-3xl mb-2">Arvores plantadas</h1>
-        <div class="border border-top"></div>
-        <div class="flex flex-wrap gap-4 pt-4 px-4">
-            {% for planted_tree in planted_trees %}
-                <div>
-                    <div>Nome: {{planted_tree.tree}}</div>
-                    <div>Usuário: {{planted_tree.user}}</div>
-                    <div>Conta: {{planted_tree.account}}</div>
-                    <div>Localização: {{planted_tree.location}}</div>
-                </div>
-            {% empty %}
-                <div class="flex h-full justify-center items-center">
-                    <p>Você ainda não plantou uma arvore.</p>
-                </div>
-            {% endfor %}
+        <div class="flex justify-between">
+            <h1 class="text-3xl mb-2">Arvores plantadas</h1>
+            <a href={% url "plants-create" %} class="bg-primary-500 text-white flex justify-center items-center px-10 hover:bg-primary-600 rounded">Plantar</a>
         </div>
+        <div class="border border-top mt-1"></div>
+        {% if planted_trees %}
+            {% with headers='Nome Usuário Conta Localização' %}
+                <div class="flex flex-wrap gap-4 pt-4 px-4">
+                    {% include "partials/_table.html" with headers=headers.split rows=planted_trees %}
+                </div>
+            {% endwith %}
+        {% else %}
+            <div class="flex h-full justify-center items-center">
+                <p>Você não plantou ainda!</p>
+            </div>
+        {% endif %}
     </main>
 {% endblock content %}
